--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=pdf
 server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/invoice_systems
+spring.datasource.username=you mysql username
+spring.datasource.password=your mysql password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
